openshift/message-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: message
  labels:
    app: message
    module: message
spec:
  ports:
  - port: 8080
    name: http
  selector:
    module: message
