openshift/message-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: message
spec:
  hosts:
    - message
  http:
  - match:
    - headers:
        end-user:
          regex: '^[M].*'
    route:
    - destination:
        host: message
        subset: v1
  - route:
    - destination:
        host: message
        subset: v1
      weight: 0
    - destination:
        host: message
        subset: v2
      weight: 100
