openshift/receiver-a-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: receiver-a
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: receiver-a
