openshift/receiver-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: receiver
spec:
  hosts:
    - receiver
  http:
  - route:
    - destination:
        host: receiver-a
      weight: 100
    - destination:
        host: receiver-b
      weight: 0
